--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ body{
 
 }
 h2{
-  line-height: 2;
+  line-height: 1.5;
   font-size:24px;
   font-weight: bold;
 }
@@ -24,6 +24,11 @@ h1{
   font-weight: bold;
 }
 p{
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+}
+.hero p{
   font-weight: bold;
   font-size:20px;
   margin:0;
@@ -35,4 +40,33 @@ p{
   font-size: 18px;
   line-height: 27px;
   padding:15px 30px
+}
+.btn-branding-outline{
+  color:var(--branding-color);
+  background-color: var(--secondary-color);
+  border:1px solid var(--branding-color);
+  border-radius:4px;
+  font-size:18px;
+  line-height: 27px;
+  padding:15px 30px;
+
+}
+.project-description{
+  padding:120px 60px;
+}
+@media(max-width:900px) {
+  h1{
+    font-size:44px;
+    line-height: 2;
+  }
+  .hero{
+    padding:60px 20px;
+  }
+  .hero h2{
+    line-height:1;
+  }
+  .project-description{
+    padding: 0;
+    text-align:center;}
+  
 }
