--- a/src/style.css
+++ b/src/style.css
@@ -6,13 +6,6 @@
 }
 body{
   font-family: var(--primary-font);
-
-}
-.hero {
-  background-color: var(--secondary-color);
-  text-align: center;
-  padding:160px 20px;
-
 }
 h2{
   line-height: 1.5;
@@ -28,10 +21,28 @@ p{
   font-size: 16px;
   line-height: 30px;
 }
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding:160px 20px;
+}
 .hero p{
   font-weight: bold;
   font-size:20px;
   margin:0;
+}
+.about-section{
+  padding:160px 20px;
+}
+.about-section h1{
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2{
+  font-size:18px;
+}
+.about-section-content{
+  margin: 30px;
 }
 .btn-branding{
   background-color: var(--branding-color);
@@ -64,6 +75,11 @@ p{
   }
   .hero h2{
     line-height:1;
+  }
+  .about-section{
+    text-align: center;
+    padding: 0;
+
   }
   .project-description{
     padding: 0;
