--- a/src/style.css
+++ b/src/style.css
@@ -7,15 +7,18 @@
 body{
   font-family: var(--primary-font);
 }
-h2{
-  line-height: 1.5;
-  font-size:24px;
+h1, h2, h3, h4, h5, h6{
   font-weight: bold;
 }
 h1{
   font-size: 96px;
-  font-weight: bold;
+  line-height: 1.5;
 }
+h2{
+  line-height: 1.5;
+  font-size:24px;
+}
+
 p{
   font-weight: normal;
   font-size: 16px;
@@ -31,19 +34,27 @@ p{
   font-size:20px;
   margin:0;
 }
-.about-section{
+.content-container{
   padding:160px 20px;
 }
-.about-section h1{
+.content h1{
   font-size: 64px;
   line-height: 80px;
 }
-.about-section h2{
+.content h2{
   font-size:18px;
 }
-.about-section-content{
+.content h3{
+  font-size:24px;
+line-height: 1.5;
+}
+.content p{
+  font-size:14px;
+}
+.content{
   margin: 30px;
 }
+
 .btn-branding{
   background-color: var(--branding-color);
   color:var(--secondary-color);
@@ -68,7 +79,7 @@ p{
 @media(max-width:900px) {
   h1{
     font-size:44px;
-    line-height: 2;
+    line-height: 80px;
   }
   .hero{
     padding:60px 20px;
@@ -76,7 +87,7 @@ p{
   .hero h2{
     line-height:1;
   }
-  .about-section{
+  .content{
     text-align: center;
     padding: 0;
 
