--- a/src/style.css
+++ b/src/style.css
@@ -14,10 +14,11 @@ h2{
   line-height: 1.5;
   font-size:24px;
 }
-
+h4{
+  font-size: 48px;}
 p{
   font-weight: normal;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 30px;
 }
 .logo{
@@ -90,6 +91,38 @@ line-height: 1.5;
 }
 .about-me{
   background-color: rgba(146,104,165, 0.5);
+}
+footer {
+  margin:60px 0;
+}
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding:30px 120px;
+  border-radius: 10px;
+}
+footer .contact-box p {
+  margin:0;
+}
+footer .email-link{
+  text-decoration: none;
+  color: black;
+  font-size:24px;
+}
+footer .email-link:hover{
+  color: var(--branding-color);
+}
+footer .social-links a{
+  margin: 0 20px;
+  color:var(--branding-color);
+  background-color: var(--secondary-color);
+  padding:10px 14px;
+  border-radius: 50%;
+  font-size:18px;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover{
+  color: var(--secondary-color);
+  background-color: var(--branding-color);
 }
 @media(max-width:900px) {
   .content h1, h1{
