--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ p{
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
-  padding:100px 20px;
+  padding:8S0px 20px;
 }
 .hero p{
   font-weight: bold;
@@ -41,7 +41,7 @@ p{
   margin:0;
 }
 .content-container{
-  padding:100px 20px;
+  padding:80px 20px;
 }
 .content h1{
   font-size: 64px;
